# pdf-format-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pdf_format_analyzer/: __init__.py  analyzer.py  cli.py  config.py  fixer.py  log_parser.py  mapper.py  models.py  prompts.py  renderer.py  smart_scan.py
tests/: test_analyzer.py  test_fixer.py  test_log_parser.py  test_mapper.py  test_renderer.py  test_smart_scan.py
